@@ -1,1 +1,5 @@
 # akka-kamon-example
+
+##VM Options for Main
+
+`-javaagent:./akka-kamon-example/kanela-agent.jar --add-opens java.base/java.util.concurrent=ALL-UNNAMED`
